--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://seeklogo.com/images/B/bandeira-paraiba-logo-7117423747-seeklogo.com.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>+ Cidades</title>
+    <title>City App</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
